--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Python Programming for Data Science &#8212; Python Programming for Data Science</title>
+  <title>Python for Data Science &#8212; Python for Data Science</title>
 
   <link rel="stylesheet" href="_static/css/index.f658d18f9b420779cfdf24aa0a7e2d77.css">
 
@@ -54,7 +54,7 @@
     const thebe_selector_output = ".output"
   </script>
   <script async="async" src="_static/sphinx-thebe.js"></script>
-  <link rel="canonical" href="https://www.tomasbeuzen.com/python-programming-for-data-science/README.html" />
+  <link rel="canonical" href="https://www.tomasbeuzen.com/python-for-data-science/README.html" />
   <link rel="shortcut icon" href="_static/favicon.png" />
   <link rel="index" title="Index" href="genindex.html" />
   <link rel="search" title="Search" href="search.html" />
@@ -65,13 +65,13 @@
 
 
   <!-- Opengraph tags -->
-  <meta property="og:url" content="https://www.tomasbeuzen.com/python-programming-for-data-science/README.html" />
+  <meta property="og:url" content="https://www.tomasbeuzen.com/python-for-data-science/README.html" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Python Programming for Data Science" />
+  <meta property="og:title" content="Python for Data Science" />
   <meta property="og:description"
-    content="Python Programming for Data Science  By Tomas Beuzen 🚀  Welcome to Python Programming for Data Science! With this website I aim to provide an introduction to ev" />
+    content="Python for Data Science  By Cevi Herdian 🚀  Welcome to Python Programming for Data Science! With this website I aim to provide an introduction to ev" />
   <meta property="og:image"
-    content="https://www.tomasbeuzen.com/python-programming-for-data-science/_static/logo.png" />
+    content="https://www.tomasbeuzen.com/python-for-data-science/_static/logo.png" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Python For Data Science" />
@@ -509,7 +509,7 @@ jupyterlab
           <div class="container">
             <p>
 
-              By Tomas Beuzen<br />
+              By Cevi Herdian<br />
 
               &copy; Copyright 2021.<br />
             </p>
