--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search &#8212; Python Programming for Data Science</title>
+    <title>Search &#8212; Python for Data Science</title>
     
   <link rel="stylesheet" href="_static/css/index.f658d18f9b420779cfdf24aa0a7e2d77.css">
 
@@ -72,7 +72,7 @@
 <!-- Opengraph tags -->
 <meta property="og:url"         content="https://www.tomasbeuzen.com/python-programming-for-data-science/search.html" />
 <meta property="og:type"        content="article" />
-<meta property="og:title"       content="Python Programming for Data Science" />
+<meta property="og:title"       content="Python for Data Science" />
 <meta property="og:description" content="" />
 <meta property="og:image"       content="https://www.tomasbeuzen.com/python-programming-for-data-science/_static/logo.png" />
 
@@ -95,7 +95,7 @@
   <img src="_static/logo.png" class="logo" alt="logo">
   
   
-  <h1 class="site-logo" id="site-title">Python Programming for Data Science</h1>
+  <h1 class="site-logo" id="site-title">Python for Data Science</h1>
   
 </a>
 </div><form class="bd-search d-flex align-items-center" action="#" method="get">
@@ -213,7 +213,7 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <a href="https://www.tomasbeuzen.com/">Tomas Beuzen</a>
+  <a href="https://itsmecevi.github.io/">Cevi Herdian</a>
 </div>
 
 </div>
